fixing lombok issue

--- a/graphql-registry/pom.xml
+++ b/graphql-registry/pom.xml
@@ -10,6 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>graphql-registry</artifactId>
+
+	<properties>
+		<lombok.version>1.18.22</lombok.version>
+	</properties>
+
     <dependencies>
         <!-- spring boot -->
         <!--dependency>
@@ -34,6 +39,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
