--- a/rest-countries-service/pom.xml
+++ b/rest-countries-service/pom.xml
@@ -14,6 +14,7 @@
 	<description>REST service</description>
 
 	<properties>
+<!--		<springfox.version>3.0.0</springfox.version>-->
 		<springfox.version>2.9.2</springfox.version>
 		<lombok.version>1.18.22</lombok.version>
 		<graphql-gateway.version>0.0.1-SNAPSHOT</graphql-gateway.version>
